feat: add cash system and notifications for the forms submit

--- a/index.html
+++ b/index.html
@@ -334,10 +334,10 @@
                             </div>
                             <div class="form__row">
                                 <div class="form__section form__section--fixed">
-                                    <button class="button button--text button--disabled" id="offshore-deposit-form-button" disabled>Déposer</button>
+                                    <button class="button button--text button--disabled" id="offshore-deposit-form-button" type="submit" disabled>Déposer</button>
                                 </div>
                                 <div class="form__section form__section--fixed">
-                                    <button class="button button--text button--secondary">Tout déposer</button>
+                                    <button class="button button--text button--secondary" type="button">Tout déposer</button>
                                 </div>
                             </div>
                         </form>
