feat: handle all deposit buttons

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                     <button class="button button--text button--disabled" id="personal-deposit-form-button" disabled type="submit">Déposer</button>
                                 </div>
                                 <div class="form__section form__section--fixed">
-                                    <button class="button button--text button--secondary" type="button">Tout déposer</button>
+                                    <button class="button button--text button--secondary" id="personal-all-deposit-button" type="button">Tout déposer</button>
                                 </div>
                             </div>
                         </form>
@@ -277,7 +277,7 @@
                                     <button class="button button--text button--disabled" id="enterprise-deposit-form-button" disabled type="submit">Déposer</button>
                                 </div>
                                 <div class="form__section form__section--fixed">
-                                    <button class="button button--text button--secondary" type="button">Tout déposer</button>
+                                    <button class="button button--text button--secondary" id="enterprise-all-deposit-button" type="button">Tout déposer</button>
                                 </div>
                             </div>
                         </form>
