fix: fix various issues on forms

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                                     <button class="button button--text button--disabled" id="offshore-deposit-form-button" type="submit" disabled>Déposer</button>
                                 </div>
                                 <div class="form__section form__section--fixed">
-                                    <button class="button button--text button--secondary" type="button">Tout déposer</button>
+                                    <button class="button button--text button--secondary" id="offshore-all-deposit-button" type="button">Tout déposer</button>
                                 </div>
                             </div>
                         </form>
