feat: work on filter

--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
                     <!-- Account history -->
                     <section class="grid__section grid__section--row-span-4">
                         <div class="section section--column">
-                            <h3 class="section__title">Historique des opérations</h3>
+                            <div class="section__row">
+                                <h3 class="section__title">Historique des opérations</h3>
+                            </div>
                             <div class="paper section__body">
                                 <div class="paper__frame" id="personal-account-log-list"></div>
                             </div>
