feat: global rework part 2

--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
                 </div>
             </header>
 
-            <!-- View / personal -->
+            <!-- View / personal account -->
             <div class="view view--active" id="personal-tab-view">
                 <div class="grid grid--account">
-                    <!-- Account owner -->
+                    <!-- Personal account owner -->
                     <section class="grid__section">
                         <div class="section">
                             <h3 class="section__title">Propriétaire du compte</h3>
                             <p class="section__text" id="personal-account-owner"></p>
                         </div>
                     </section>
-                    <!-- Account history -->
+                    <!-- Personal account log list -->
                     <section class="grid__section grid__section--row-span-4">
                         <div class="section section--column">
                             <div class="section__row">
@@ -85,14 +85,14 @@
                             </div>
                         </div>
                     </section>
-                    <!-- Account number -->
+                    <!-- Personal account number -->
                     <section class="grid__section grid__section--with-border">
                         <div class="section">
                             <h3 class="section__title">Numéro du compte</h3>
                             <p class="section__number" id="personal-account-number"></p>
                         </div>
                     </section>
-                    <!-- Account add form -->
+                    <!-- Personal account favorite account add form -->
                     <section class="grid__section">
                         <form class="form" id="personal-favorite-account-form" novalidate>
                             <h2 class="form__title">Ajouter un destinataire</h2>
@@ -100,12 +100,10 @@
                                 <div class="form__section form__section--fluid">
                                     <label class="form__label" for="personal-favorite-account-name-input">Nom du compte</label>
                                     <input class="form__input" type="text" placeholder="Entrer le nom du compte" name="personal-favorite-account-name" required maxlength="40" id="personal-favorite-account-name-input">
-                                    <p class="form__message" id="personal-favorite-account-name-message"></p>
                                 </div>
                                 <div class="form__section form__section--fluid">
                                     <label class="form__label" for="personal-favorite-account-number-input">Numéro du compte</label>
                                     <input class="form__input" type="text" placeholder="Entrer le numéro du compte" name="account-number" required minlength="10" maxlength="10" pattern="[0-9]{10}" id="personal-favorite-account-number-input">
-                                    <p class="form__message" id="personal-favorite-account-number-message"></p>
                                 </div>
                                 <div class="form__section form__section--fixed">
                                     <button class="button button--icon button--disabled" disabled type="submit" id="personal-favorite-account-form-button">
@@ -118,7 +116,7 @@
                             </div>
                         </form>
                     </section>
-                    <!-- Account list -->
+                    <!-- Personal account favorite account list -->
                     <section class="grid__section">
                         <div class="section section--column">
                             <h3 class="section__title">Comptes enregistrés <span id="personal-favorite-account-sum-text"></span></h3>
@@ -132,17 +130,16 @@
                 </div>
             </div>
 
-            <!-- View / personal operation -->
+            <!-- View / personal account operation -->
             <div class="view" id="personal-operation-tab-view">
                 <div class="grid grid--operation">
-                    <!-- Operation deposit form -->
+                    <!-- Personal account operation Deposit form -->
                     <section class="grid__section grid__section--with-border">
                         <form class="form" id="personal-deposit-form" novalidate>
                             <h2 class="form__title">Effectuer un dépot</h2>
                             <div class="form__section form__section--margin">
                                 <label class="form__label" for="personal-deposit-amount-input">Montant du dépot</label>
                                 <input class="form__input" type="text" name="personal-deposit-amount" id="personal-deposit-amount-input" placeholder="Entrer le montant du dépot" required pattern="^[5-9]\d{2}\d*$|^[1-9]\d{3}\d*$">
-                                <p class="form__message" id="personal-deposit-amount-message"></p>
                             </div>
                             <div class="form__row">
                                 <div class="form__section form__section--fixed">
@@ -154,7 +151,7 @@
                             </div>
                         </form>
                     </section>
-                    <!-- Operation History -->
+                    <!-- Personal account operation log list -->
                     <section class="grid__section grid__section--row-span-2">
                         <div class="section section--column">
                             <h3 class="section__title">Historique des opérations</h3>
@@ -163,14 +160,13 @@
                             </div>
                         </div>
                     </section>
-                    <!-- Operation Withdraw form -->
+                    <!-- Personal account operation Withdraw form -->
                     <section class="grid__section">
                         <form class="form" id="personal-withdraw-form" novalidate>
                             <h2 class="form__title">Effectuer un retrait</h2>
                             <div class="form__section form__section--margin">
                                 <label class="form__label" for="personal-withdraw-amount-input">Montant du retrait</label>
                                 <input class="form__input" type="text" name="personal-withdraw-amount" id="personal-withdraw-amount-input" placeholder="Entrer le montant du retrait" required pattern="^[5-9]\d{2}\d*$|^[1-9]\d{3}\d*$">
-                                <p class="form__message" id="personal-withdraw-amount-message"></p>
                             </div>
                             <button class="button button--text button--disabled" id="personal-withdraw-form-button" disabled type="submit">Retirer</button>
                         </form>
@@ -178,10 +174,10 @@
                 </div>
             </div>
 
-            <!-- View / personal transfer -->
+            <!-- View / personal account transfer -->
             <div class="view" id="personal-transfer-tab-view">
                 <div class="grid grid--transfer">
-                    <!-- Transfer form -->
+                    <!-- personal account transfer form -->
                     <section class="grid__section">
                         <form class="form" id="personal-transfer-form" novalidate>
                             <h2 class="form__title">Effectuer un transfert</h2>
@@ -189,23 +185,20 @@
                                 <div class="form__section form__section--fluid">
                                     <label class="form__label" for="personal-transfer-amount-input">Montant du transfert</label>
                                     <input class="form__input" type="text" name="personal-transfer-amount" placeholder="Entrer le montant du transfert" id="personal-transfer-amount-input" required pattern="^[5-9]\d{2}\d*$|^[1-9]\d{3}\d*$">
-                                    <p class="form__message" id="personal-transfer-amount-message"></p>
                                 </div>
                                 <div class="form__section form__section--fluid">
                                     <label class="form__label" for="personal-transfer-account-number-input">Numéro de compte du déstinataire</label>
                                     <input class="form__input" type="text" name="personal-transfer-account-number" placeholder="Entrer le numéro de compte" id="personal-transfer-account-number-input" required minlength="10" maxlength="10" pattern="[0-9]{10}">
-                                    <p class="form__message" id="personal-transfer-account-number-message"></p>
                                 </div>
                             </div>
                             <div class="form__section form__section--margin">
                                 <label class="form__label" for="personal-transfer-reference-input">Référence du transfert</label>
                                 <input class="form__input" type="text" name="transfer-reference" placeholder="Entrer la référence du transfert" id="personal-transfer-reference-input" required maxlength="40">
-                                <p class="form__message" id="personal-transfer-reference-message"></p>
                             </div>
                             <button class="button button--text button--disabled" id="personal-transfer-form-button" disabled type="submit">Transférer</button>
                         </form>
                     </section>
-                    <!-- Transfer account list -->
+                    <!-- Personal account favorite account paste list -->
                     <section class="grid__section">
                         <div class="section section--column">
                             <h3 class="section__title">Comptes enregistrés</h3>
@@ -219,17 +212,17 @@
                 </div>
             </div>
 
-            <!-- View / enterprise -->
+            <!-- View / enterprise account -->
             <div class="view" id="enterprise-tab-view">
                 <div class="grid grid--enterprise">
-                    <!-- Enterprise owner -->
+                    <!-- Enterprise account owner -->
                     <section class="grid__section">
                         <div class="section">
                             <h3 class="section__title">Propriétaire de l'entreprise</h3>
                             <p class="section__text" id="enterprise-account-owner"></p>
                         </div>
                     </section>
-                    <!-- Enterprise history -->
+                    <!-- Enterprise account log list -->
                     <section class="grid__section grid__section--row-span-4">
                         <div class="section section--column">
                             <h3 class="section__title">Historique des opérations</h3>
@@ -245,21 +238,20 @@
                             </div>
                         </div>
                     </section>
-                    <!-- Enterprise balance -->
+                    <!-- Enterprise account balance -->
                     <section class="grid__section grid__section--with-border">
                         <div class="section">
                             <h3 class="section__title">Solde de l'entreprise</h3>
                             <p class="section__number" id="enterprise-account-balance"></p>
                         </div>
                     </section>
-                    <!-- Enterprise deposit form -->
+                    <!-- Enterprise account deposit form -->
                     <section class="grid__section grid__section--with-border">
                         <form class="form" id="enterprise-deposit-form" novalidate>
                             <h2 class="form__title">Effectuer un dépot</h2>
                             <div class="form__section form__section--margin">
                                 <label class="form__label" for="enterprise-deposit-amount-input">Montant du dépot</label>
                                 <input class="form__input" type="text" name="enterprise-deposit-amount" id="enterprise-deposit-amount-input" placeholder="Entrer le montant du dépot" required pattern="^[5-9]\d{2}\d*$|^[1-9]\d{3}\d*$">
-                                <p class="form__message" id="enterprise-deposit-amount-message"></p>
                             </div>
                             <div class="form__row">
                                 <div class="form__section form__section--fixed">
@@ -271,14 +263,13 @@
                             </div>
                         </form>
                     </section>
-                    <!-- Enterprise withdraw form -->
+                    <!-- Enterprise account withdraw form -->
                     <section class="grid__section">
                         <form class="form" id="enterprise-withdraw-form" novalidate>
                             <h2 class="form__title">Effectuer un retrait</h2>
                             <div class="form__section form__section--margin">
                                 <label class="form__label" for="enterprise-withdraw-amount-input">Montant du retrait</label>
                                 <input class="form__input" type="text" name="enterprise-withdraw-amount" id="enterprise-withdraw-amount-input" placeholder="Entrer le montant du retrait" required pattern="^[5-9]\d{2}\d*$">
-                                <p class="form__message" id="enterprise-withdraw-amount-message"></p>
                             </div>
                             <button class="button button--text button--disabled" id="enterprise-withdraw-form-button" disabled>Retirer</button>
                         </form>
@@ -289,14 +280,14 @@
             <!-- View / offshore -->
             <div class="view" id="offshore-tab-view">
                 <div class="grid grid--offshore">
-                    <!-- Offshore owner -->
+                    <!-- Offshore account owner -->
                     <section class="grid__section">
                         <div class="section">
                             <h3 class="section__title">Propriétaire du compte offshore</h3>
                             <p class="section__text section__text--reversed" id="offshore-account-owner"></p>
                         </div>
                     </section>
-                    <!-- Offshore history -->
+                    <!-- Offshore account log list -->
                     <section class="grid__section grid__section--row-span-4">
                         <div class="section section--column">
                             <h3 class="section__title">Historique des opérations</h3>
@@ -305,21 +296,20 @@
                             </div>
                         </div>
                     </section>
-                    <!-- Offshore balance -->
+                    <!-- Offshore account balance -->
                     <section class="grid__section grid__section--with-border">
                         <div class="section">
                             <h3 class="section__title">Solde du compte offshore</h3>
                             <p class="section__number" id="offshore-account-balance"></p>
                         </div>
                     </section>
-                    <!-- offshore deposit form -->
+                    <!-- offshore account deposit form -->
                     <section class="grid__section">
                         <form class="form" id="offshore-deposit-form" novalidate>
                             <h2 class="form__title">Effectuer un dépot</h2>
                             <div class="form__section form__section--margin">
                                 <label class="form__label" for="offshore-deposit-amount-input">Montant du dépot</label>
                                 <input class="form__input" type="text" name="offshore-deposit-amount" id="offshore-deposit-amount-input" placeholder="Entrer le montant du dépot" required pattern="^[5-9]\d{2}\d*$|^[1-9]\d{3}\d*$">
-                                <p class="form__message" id="offshore-deposit-amount-message"></p>
                             </div>
                             <div class="form__row">
                                 <div class="form__section form__section--fixed">
@@ -348,8 +338,8 @@
         </div>
     </template>
 
-    <!-- Template / account with delete button -->
-    <template id="account-delete-template">
+    <!-- Template / favorite account with delete button -->
+    <template id="favorite-account-delete-template">
         <tr class="account">
             <td class="account__section">
                 <h4 class="account__name"></h4>
@@ -366,8 +356,8 @@
         </tr>
     </template>
 
-    <!-- Template / account with paste feature -->
-    <template id="account-paste-template">
+    <!-- Template / favorite account with paste feature -->
+    <template id="favorite-account-paste-template">
         <tr class="account account--clickable">
             <td class="account__section">
                 <h4 class="account__name account__name--margin"></h4>
@@ -397,7 +387,7 @@
         </details>
     </template>
 
-    <!-- Template / Notification -->
+    <!-- Template / notification -->
     <template id="notification-template">
         <li class="notification">
             <div class="notification__section">
